tests/snippets/invalid_snippets/missing_fields.snippet
<!javascript
  (
    "log",
    "Logs a Message to the console",
    ```console.log("Hello world")```
  )
  (
    "logerr",
    ```console.error("This is an Error")```
  )
>

